--- a/date/2025-05/page-2.htm
+++ b/date/2025-05/page-2.htm
@@ -110,6 +110,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-03">
+                                <div class="col-md-3">
+                                    <a href="/news/article-110686.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-110686.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别</h3>
+                                    </a>
+                                    <p>目录  1、CMD指令和ENTRYPOINT指令说明 2、CMD指令只有最后一条生效的原因 3、CMD指令演示 4、ENTRYPOINT指令演示 5、总结   CMD指令和ENTRYPOINT指令作用</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-03">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-5-3-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-5-3-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、美国、新加坡、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-109807.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="使用etcd选举sdk实践master/slave故障转移_在线工具" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-109807.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">使用etcd选举sdk实践master/slave故障转移_在线工具</h3>
+                                    </a>
+                                    <p>本次将记录[利用etcd选主sdk实践master/slave高可用]， 并利用etcdctl原生脚本验证选主sdk的工作原理。 master/slave高可用集群 本文目标 在异地多机房部署节点，s</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-109805.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="[DEBUG] QAT Nginx for docker 部署时&#8221;&#8211;with-ld-opt&#8221;出错" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-109805.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">[DEBUG] QAT Nginx for docker 部署时&#8221;&#8211;with-ld-opt&#8221;出错</h3>
+                                    </a>
+                                    <p>layout: post title: [DEBUG] QAT Nginx for docker 部署时"--with-ld-opt"出错 subtitle: 记一次debug经历 tags: [de</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-05-02">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-5-2-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「5月2日」最高速度19.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-5-2-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「5月2日」最高速度19.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、韩国、香港、日本、加拿大、欧洲、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-05-01">
                                 <div class="col-md-3">
                                     <a href="/news/article-108967.htm" class="xcblog-blog-url">
@@ -160,15 +225,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-86867.htm" title="动物医院哪里好一点啊（动物医院大众点评）">动物医院哪里好一点啊（动物医院大众点评）</a></li>
-                        <li class="py-2"><a href="/news/article-110686.htm" title="Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别">Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别</a></li>
-                        <li class="py-2"><a href="/news/article-92732.htm" title="动物疫苗接种时间表图片大全 动物疫苗接种时间表图片大全集">动物疫苗接种时间表图片大全 动物疫苗接种时间表图片大全集</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
-                        <li class="py-2"><a href="/news/article-87572.htm" title="动物注射疫苗注射哪里最好（动物疫苗注射注意事项）">动物注射疫苗注射哪里最好（动物疫苗注射注意事项）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-30-free-high-speed-nodes.htm" title="「4月30日」最高速度22.4M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「4月30日」最高速度22.4M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-105524.htm" title="品牌门窗哪个比较好?选哪个质量好点的(门窗品牌那个好)">品牌门窗哪个比较好?选哪个质量好点的(门窗品牌那个好)</a></li>
+                        <li class="py-2"><a href="/news/article-95026.htm" title="领养宠物的平台免费吗（领养宠物免费的地方在哪里）">领养宠物的平台免费吗（领养宠物免费的地方在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-90929.htm" title="同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）">同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）</a></li>
+                        <li class="py-2"><a href="/news/article-108966.htm" title="动物医院有公立的吗还是私立的医院 动物医院有公立的吗还是私立的医院好">动物医院有公立的吗还是私立的医院 动物医院有公立的吗还是私立的医院好</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-87573.htm" title="宠物医院好评模板100字图片（宠物医院好评模版）">宠物医院好评模板100字图片（宠物医院好评模版）</a></li>
                         <li class="py-2"><a href="/news/article-93995.htm" title="狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）">狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）</a></li>
-                        <li class="py-2"><a href="/news/article-93484.htm" title="宠物领养中心在哪（宠物领养去哪里领养）">宠物领养中心在哪（宠物领养去哪里领养）</a></li>
+                        <li class="py-2"><a href="/news/article-92023.htm" title="中国兽药十大名牌厂家排名河南（河南兽药销量排名）">中国兽药十大名牌厂家排名河南（河南兽药销量排名）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-108967.htm" title="动物疫苗定义是什么 动物疫苗定义是什么意思">动物疫苗定义是什么 动物疫苗定义是什么意思</a></li>
                     </ul>
     </div>
 </div>
@@ -180,7 +245,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
