--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -107,6 +107,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-30">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-30-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「4月30日」最高速度22.4M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-30-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月30日」最高速度22.4M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、新加坡、加拿大、香港、日本、欧洲、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-29">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-29-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-29-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、加拿大、日本、美国、欧洲、香港、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-28">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-28-free-v2ray.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月28日」最高速度19.6M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-28-free-v2ray.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月28日」最高速度19.6M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、新加坡、欧洲、美国、加拿大、韩国、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-27">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-27-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「4月27日」最高速度20.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-27-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月27日」最高速度20.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、美国、香港、日本、新加坡、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-26">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-26-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-26-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、韩国、美国、欧洲、新加坡、日本、加拿大等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-04-25">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-4-25-node-share.htm" class="xcblog-blog-url">
@@ -172,71 +237,6 @@
                                     <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、欧洲、韩国等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-19">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、加拿大、新加坡、欧洲、美国、香港、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-18">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-18-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-18-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、加拿大、日本、韩国、欧洲、新加坡、美国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-17">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、韩国、新加坡、欧洲、日本、香港、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-16">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-16-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ef0258d05bc7d0211f47300749f0816c.webp" alt="「4月16日」最高速度20.2M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-16-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月16日」最高速度20.2M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、美国、日本、欧洲、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-15">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-15-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ef0258d05bc7d0211f47300749f0816c.webp" alt="「4月15日」最高速度18.1M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-15-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月15日」最高速度18.1M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、美国、欧洲、韩国、香港、加拿大、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-89060.htm" title="开宠物零食网店手续（开宠物食品店需要多少钱）">开宠物零食网店手续（开宠物食品店需要多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-103927.htm" title="给健康动物注射疫苗属于（给健康动物注射疫苗属于几级预防）">给健康动物注射疫苗属于（给健康动物注射疫苗属于几级预防）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-23-free-node-subscribe.htm" title="「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
-                        <li class="py-2"><a href="/news/article-101590.htm" title="牛羊兽药批发网（牛羊兽药做的最好的公司）">牛羊兽药批发网（牛羊兽药做的最好的公司）</a></li>
-                        <li class="py-2"><a href="/news/article-104833.htm" title="被家猫抓伤轻微出血伤口有点疼要紧吗（被家猫抓伤出了一点点血）">被家猫抓伤轻微出血伤口有点疼要紧吗（被家猫抓伤出了一点点血）</a></li>
-                        <li class="py-2"><a href="/news/article-92021.htm" title="成都狗狗宠物领养中心（成都狗狗领养中心官网）">成都狗狗宠物领养中心（成都狗狗领养中心官网）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-22-free-v2ray.htm" title="「4月22日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「4月22日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-111499.htm" title="合肥有宠物领养中心吗在哪（合肥有宠物领养中心吗在哪里）">合肥有宠物领养中心吗在哪（合肥有宠物领养中心吗在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-90929.htm" title="同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）">同安宠物领养中心在哪里有（同安宠物领养中心在哪里有啊）</a></li>
+                        <li class="py-2"><a href="/news/article-88311.htm" title="动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）">动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）</a></li>
+                        <li class="py-2"><a href="/news/article-93995.htm" title="狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）">狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）</a></li>
                         <li class="py-2"><a href="/news/article-93993.htm" title="青岛动物医院招聘官网（青岛动物医院 南京路）">青岛动物医院招聘官网（青岛动物医院 南京路）</a></li>
-                        <li class="py-2"><a href="/news/article-86159.htm" title="DecimalFormat保留小数位">DecimalFormat保留小数位</a></li>
+                        <li class="py-2"><a href="/news/article-99436.htm" title="动物用狂犬病疫苗的作用（动物用狂犬病疫苗的作用是什么）">动物用狂犬病疫苗的作用（动物用狂犬病疫苗的作用是什么）</a></li>
+                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
